--- a/homepage.html
+++ b/homepage.html
@@ -7,70 +7,21 @@
     <link rel="stylesheet" href="css/style.css">
     <title> ReadMe </title>
 </head>
-
 <body>
-    <!-- Navbar -->
-    <nav class="navbar"> 
-        <img src="image/ReadMe_Logo.png" class="logo"/>
-        <div class="navbar-link">
-            <a style="margin-right: 10px;"> Masuk </a>
-            <a> Bahasa Indonesia </a>
+    <nav class="navbar-hp">
+        <div class="navbar-hp1"> 
+            <div>
+                <img src="image/ReadMe_Logo.png" class="logo"/>
+            </div>
+            <div class="navbar-hp2">
+                <a>Kategori</a>
+                <a>Telusuri</a>
+                <a>Tulis</a>
+            </div>
+            <div class="navbar-hp3">
+                <a>Username</a>
+            </div>
         </div>
     </nav>
-
-    <!-- Body -->
-    <div class="landing">
-        <div class="landing-link"> 
-            <h1 style="color: #8B8181; margin-bottom: 30px"> Welcome to ReadMe </h1>
-            <h3 style="margin-bottom: 30px;"> Platform sosial untuk bercerita yang <br> paling disukai di dunia </h3>
-            <p style="margin-bottom: 20px"> Wattpad menghubungkan komunitas global dari 90 juta <br> pembaca dan penulis melalui kekuatan cerita. </p>
-            <div class="landing-button"> 
-                <button class="button"> Mulai Membaca </button>
-                <button class="button-cta"> Mulai Menulis </button>
-            </div>
-        </div>
-    </div>
-
-    <div class="landing-work"> 
-        <div class="landing-work-title">
-            <h3 style="margin-bottom: 20px;"> Cara Kerja </h3>
-            <p> Buat ceritamu lebih mudah ditemukan dengan kekuatan komunitas dan teknologi di ReadMe </p>
-        </div>
-        <div class="container-cards">
-            <div class="cards">
-                <div class="cards-title">
-                    <h1> 1 </h1>
-                    <h2> Tulis </h2>
-                </div>
-                <p class="cards-text"> Bagikan cerita unik dan orisinal kamu di Wattpad. Dapatkan referensi dan strategi menulis untuk membantumu mengarang kisah yang hanya dapat kamu ceritakan sendiri. </p>
-            </div>
-            <div class="cards">
-                <div class="cards-title">
-                    <h1> 2 </h1>
-                    <h2> Bangun </h2>
-                </div>
-                <p class="cards-text"> Dapatkan penggemar dari seluruh dunia saat cerita kamu menjadi semakin populer. Terhubung dengan penulis lain yang juga suka bercerita. </p>
-            </div>
-            <div class="cards">
-                <div class="cards-title">
-                    <h1> 3 </h1>
-                    <h2> Perluas jangkauan </h2>
-                </div>
-                <p class="cards-text"> Dapatkan status Wattpad Star dan terbitkan atau adaptasikan ceritamu menjadi film atau acara televisi dengan Wattpad Books dan Wattpad Studios! </p>
-            </div>
-        </div>
-    </div>
-
-    <footer>
-        <h3 style="color: white; margin: 20px"> About Us </h3>
-        <p style="color: white;  margin: 20px"> Our journal planner website is the perfect tool for individuals looking to increase productivity and reflect on your personal growth journey. Whether you're looking to increase your productivity, set and achieve personal goals, or simply find inner peace, our journal planner website has everything you need. </p>
-        <h3 style="color: white;  margin: 20px"> Our Social Media </h3>
-        <div class="sosmed">
-            <a href="" style="color: white;"> Instagram </a>
-            <a href="" style="color: white;"> Twitter </a>
-            <a href="" style="color: white;"> Pinterest </a>
-        </div>
-    </footer>
-    
 </body>
 </html>
