--- a/signIn.html
+++ b/signIn.html
@@ -19,7 +19,7 @@
                         <label for="fname">Email:</label><br>
                         <input type="text" id="fname" name="fname" class="label"><br>
                         <label for="lname">Password:</label><br>
-                        <input type="text" id="lname" name="lname" class="label">
+                        <input type="password" id="lname" name="lname" class="label">
                     </form>
                       <div class="remember-me">
                         <div>
