--- a/write.html
+++ b/write.html
@@ -32,20 +32,41 @@
                 <p>Detail Cerita</p>
             </div>
             <!-- Div Judul -->
-            <div>
-                <div> <h3>Judul</h3> </div>
-                <div><input type="text" name="" id=""></div>
+            <div class="detail-container">
+                <div> <h5>Judul</h5> </div>
+                <div><input type="text" name="" id="" class="detail-judul" placeholder="Judul cerita"></div>
             </div>
-            <div>
-                <div> <h3>Deskripsi</h3> </div>
-                <div><input type="text" name="" id=""></div>
+            <div class="detail-kategori">
+                <div> <h5>Sinopsis</h5> </div>
+                <div><input type="text" name="" id="" class="detail-desc" placeholder="Sinopsis cerita"></div>
             </div>
-            <div>
-                <div> <h3>Kategori</h3> </div>
-                <div><input type="text" name="" id=""></div>
+            <div class="detail-container">
+                <label for="cars"> Kategori </label>
+                <select name="cars" id="cars">
+                    <option value="volvo">Pilih Kategori</option>
+                    <option value="volvo">Drama</option>
+                    <option value="saab">Romance</option>
+                    <option value="mercedes">Komedi</option>
+                    <option value="audi">Adventure</option>
+                    <option value="volvo">Horror</option>
+                    <option value="saab">Sci-Fi/option>
+                    <option value="mercedes">Thriller</option>
+                    <option value="audi">Slice of Life</option>
+                </select>
             </div>
         </div>
     </div>
+
+    <footer>
+        <h3 style="color: white; margin: 20px"> About Us </h3>
+        <p style="color: white;  margin: 20px"> Our journal planner website is the perfect tool for individuals looking to increase productivity and reflect on your personal growth journey. Whether you're looking to increase your productivity, set and achieve personal goals, or simply find inner peace, our journal planner website has everything you need. </p>
+        <h3 style="color: white;  margin: 20px"> Our Social Media </h3>
+        <div class="sosmed">
+            <a href="" style="color: white;"> Instagram </a>
+            <a href="" style="color: white;"> Twitter </a>
+            <a href="" style="color: white;"> Pinterest </a>
+        </div>
+    </footer>
 
 </body>
 </html>
