--- a/kategori.html
+++ b/kategori.html
@@ -56,7 +56,7 @@
     <!-- Body -->
     <div class="kategori">
         <div class="judul-kategori">
-            <h1> Kategori 1 Cerita </h1>
+            <h1> Kategori Cerita </h1>
         </div>
         <div class="box-container2">
             <!-- gambar dan text -->
