--- a/navbar.html
+++ b/navbar.html
@@ -8,6 +8,7 @@
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
 <body>
+    <div class="box"></div>
   <nav class="navbar">
     <img src="image/ReadMe_Logo.png" class="logo"/>
     <div class="content">
