--- a/kategori.html
+++ b/kategori.html
@@ -68,6 +68,26 @@
                 <!-- text -->
                 <div class="kategori-text">
                     <div> <p>Judul Cerita</p></div>
+                    <div class="kategori-button">
+                        <button>Mulai Membaca</button>
+                        <button>+</button>
+                    </div>
+                    <div> <p>by Penulis</p></div>
+                    <div> <p>Sinopsis dari cerita nanti maks ada 5 line</p></div>
+                </div>
+            </div>
+            <div class="kategori-box"> 
+                <!-- gambar -->
+                <div>
+                    <a href="write.html"><img class="cover-img" src="image/image 1.jpeg" alt="" ></a> 
+                </div>
+                <!-- text -->
+                <div class="kategori-text">
+                    <div>Judul Cerita</div>
+                    <div class="kategori-button">
+                        <button>Mulai Membaca</button>
+                        <button>+</button>
+                    </div>
                     <div> <p>by Penulis</p></div>
                     <div> <p>Sinopsis dari cerita nanti maks ada 5 line</p></div>
                 </div>
@@ -80,6 +100,10 @@
                 <!-- text -->
                 <div class="kategori-text">
                     <div> <p>Judul Cerita</p></div>
+                    <div class="kategori-button">
+                        <button>Mulai Membaca</button>
+                        <button>+</button>
+                    </div>
                     <div> <p>by Penulis</p></div>
                     <div> <p>Sinopsis dari cerita nanti maks ada 5 line</p></div>
                 </div>
@@ -92,6 +116,10 @@
                 <!-- text -->
                 <div class="kategori-text">
                     <div> <p>Judul Cerita</p></div>
+                    <div class="kategori-button">
+                        <button>Mulai Membaca</button>
+                        <button>+</button>
+                    </div>
                     <div> <p>by Penulis</p></div>
                     <div> <p>Sinopsis dari cerita nanti maks ada 5 line</p></div>
                 </div>
@@ -104,6 +132,10 @@
                 <!-- text -->
                 <div class="kategori-text">
                     <div> <p>Judul Cerita</p></div>
+                    <div class="kategori-button">
+                        <button>Mulai Membaca</button>
+                        <button>+</button>
+                    </div>
                     <div> <p>by Penulis</p></div>
                     <div> <p>Sinopsis dari cerita nanti maks ada 5 line</p></div>
                 </div>
@@ -116,6 +148,10 @@
                 <!-- text -->
                 <div class="kategori-text">
                     <div> <p>Judul Cerita</p></div>
+                    <div class="kategori-button">
+                        <button>Mulai Membaca</button>
+                        <button>+</button>
+                    </div>
                     <div> <p>by Penulis</p></div>
                     <div> <p>Sinopsis dari cerita nanti maks ada 5 line</p></div>
                 </div>
@@ -128,6 +164,10 @@
                 <!-- text -->
                 <div class="kategori-text">
                     <div> <p>Judul Cerita</p></div>
+                    <div class="kategori-button">
+                        <button>Mulai Membaca</button>
+                        <button>+</button>
+                    </div>
                     <div> <p>by Penulis</p></div>
                     <div> <p>Sinopsis dari cerita nanti maks ada 5 line</p></div>
                 </div>
@@ -140,6 +180,10 @@
                 <!-- text -->
                 <div class="kategori-text">
                     <div> <p>Judul Cerita</p></div>
+                    <div class="kategori-button">
+                        <button>Mulai Membaca</button>
+                        <button>+</button>
+                    </div>
                     <div> <p>by Penulis</p></div>
                     <div> <p>Sinopsis dari cerita nanti maks ada 5 line</p></div>
                 </div>
@@ -152,6 +196,10 @@
                 <!-- text -->
                 <div class="kategori-text">
                     <div> <p>Judul Cerita</p></div>
+                    <div class="kategori-button">
+                        <button>Mulai Membaca</button>
+                        <button>+</button>
+                    </div>
                     <div> <p>by Penulis</p></div>
                     <div> <p>Sinopsis dari cerita nanti maks ada 5 line</p></div>
                 </div>
@@ -164,18 +212,10 @@
                 <!-- text -->
                 <div class="kategori-text">
                     <div> <p>Judul Cerita</p></div>
-                    <div> <p>by Penulis</p></div>
-                    <div> <p>Sinopsis dari cerita nanti maks ada 5 line</p></div>
-                </div>
-            </div>
-            <div class="kategori-box"> 
-                <!-- gambar -->
-                <div>
-                    <img class="cover-img" src="image/image 1.jpeg" alt="">
-                </div>
-                <!-- text -->
-                <div class="kategori-text">
-                    <div> <p>Judul Cerita</p></div>
+                    <div class="kategori-button">
+                        <button>Mulai Membaca</button>
+                        <button>+</button>
+                    </div>
                     <div> <p>by Penulis</p></div>
                     <div> <p>Sinopsis dari cerita nanti maks ada 5 line</p></div>
                 </div>
