coba buka satu satu

--- a/navbar.html
+++ b/navbar.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
 <body>
-    <div class="box"></div>
+  <div class="box"></div>
   <nav class="navbar">
     <img src="image/ReadMe_Logo.png" class="logo"/>
     <div class="content">
@@ -16,11 +16,11 @@
         <div class="icon cancel-btn">
           <i class="fas fa-times"></i>
         </div>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Write</a></li>
-        <li><a href="#">Library</a></li>
-        <li><a href="#">Search</a></li>
-        <li><a href="#">Notification</a></li>
+        <li><a href="homepage.html">Home</a></li>
+        <li><a href="write.html">Write</a></li>
+        <li><a href="library.html">Library</a></li>
+        <li><a href="search.html">Search</a></li>
+        <li><a href="notification.html">Notification</a></li>
       </ul>
       <div class="icon menu-btn">
         <i class="fas fa-bars"></i>
