--- a/write.html
+++ b/write.html
@@ -10,25 +10,26 @@
 </head>
 <body>
     <!-- Navbar -->
+    <div class="box"></div>
     <nav class="navbar">
-        <img src="image/ReadMe_Logo.png" class="logo"/>
-        <div class="content">
-          <ul class="menu-list">
-            <div class="icon cancel-btn">
-              <i class="fas fa-times"></i>
-            </div>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Write</a></li>
-            <li><a href="#">Library</a></li>
-            <li><a href="#">Search</a></li>
-            <li><a href="#">Notification</a></li>
-          </ul>
-          <div class="icon menu-btn">
-            <i class="fas fa-bars"></i>
+      <img src="image/ReadMe_Logo.png" class="logo"/>
+      <div class="content">
+        <ul class="menu-list">
+          <div class="icon cancel-btn">
+            <i class="fas fa-times"></i>
           </div>
+          <li><a href="homepage.html">Home</a></li>
+          <li><a href="write.html">Write</a></li>
+          <li><a href="library.html">Library</a></li>
+          <li><a href="search.html">Search</a></li>
+          <li><a href="notification.html">Notification</a></li>
+        </ul>
+        <div class="icon menu-btn">
+          <i class="fas fa-bars"></i>
         </div>
-      </nav>
-    
+      </div>
+    </nav>
+
       <script>
         const body = document.querySelector("body");
         const navbar = document.querySelector(".navbar");
