--- a/writeStory.html
+++ b/writeStory.html
@@ -9,25 +9,34 @@
 </head>
 <body>
     <!-- Navbar -->
-    <nav>
-        <div>
-            
-        </div>
-        <div>
-            <img src="image/image 1.jpeg" alt="" class="writeStory-img">
-        </div>
-        <div class="write-nav">
-            <div>
-                <p>Tambahkan info cerita</p>
-                <h2>Cerita tak berjudul</h2>
+    <nav class="write-nav">
+        <div class="write-nav2">
+            <a>
+                <img src="image/image 1.jpeg" alt="" class="writeStory-img">
+            </a>
+            <div class="write-nav3">
+                <div>
+                    <p>Judul Cerita</p>
+                    <h2>Judul Bab</h2>
+                </div>
             </div>
-            <div>
-                <button>Batalkan</button>
-                <button>Lanjut</button>
-            </div>
+        </div>
+        <div class="write-btn">
+            <button>Publikasikan</button>
+            <button>Simpan</button>
         </div>
     </nav>
     <hr>
+
+    <!-- Body -->
+    <div class="write-st">
+        <div class="write-st2">
+            <form>
+                <input type="text" class="write-jdl" placeholder="Judul Bab">
+                <input type="text" class="write-isi" placeholder="Tulis cerita">
+              </form>
+        </div>
+    </div>
 
     <footer>
         <h3 style="color: white; margin: 20px"> About Us </h3>
