--- a/homepage.html
+++ b/homepage.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/styleNav.css">
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/global.css">
     <title> ReadMe </title>
 </head>
 <body>
@@ -28,7 +30,103 @@
           </div>
         </div>
       </nav>
-  
+      <div class="group-parent">
+        <div class="group-container">
+          <div class="rectangle-parent">
+            <div class="group-child"></div>
+            <b class="tagline">Tagline</b>
+            <div class="sinopsis-dari-cerita">
+              Sinopsis dari cerita atau tulisan yang dipublikasikan
+            </div>
+            <img
+              class="mask-group-icon"
+              alt=""
+              src="image/mask-group@2x.png"
+            />
+          </div>
+          <b class="trending">Trending</b>
+          <div class="jangan-lupa-baca">
+            Jangan lupa baca cerita yang lagi rame ini ya
+          </div>
+        </div>
+        <img class="group-item" alt="" src="image/ellipse-5.svg" /><img
+          class="group-inner"
+          alt=""
+          src="image/ellipse-6.svg"
+        /><img class="ellipse-icon" alt="" src="image/ellipse-6.svg" /><img
+          class="group-child1"
+          alt=""
+          src="image/ellipse-6.svg"
+        />
+      </div>
+      <div class="halaman-awal-child" style="left: 300px;"></div>
+      <b class="kategori">Kategori</b>
+      <div class="rectangle-group">
+        <div class="rectangle-div"></div>
+        <div class="group-child2"></div>
+        <div class="group-child3"></div>
+        <div class="group-child4"></div>
+        <div class="group-child5"></div>
+        <div class="group-child6"></div>
+        <div class="group-child7"></div>
+        <div class="group-child8"></div>
+      </div>
+      <div class="halaman-awal-item"></div>
+      <div class="rectangle-container">
+        <div class="group-child9"></div>
+        <div class="parts">50 parts</div>
+        <b class="judul">Judul</b>
+        <div class="sinopsis-dari-cerita1">
+          Sinopsis dari cerita atau tulisan yang dipublikasikan
+        </div>
+        <div class="group-child10"></div>
+        <div class="status">Status</div>
+        <img
+          class="mask-group-icon1"
+          alt=""
+          src="image/mask-group1@2x.png"
+        /><img
+          class="mask-group-icon1"
+          alt=""
+          src="image/mask-group1@2x.png"
+        />
+      </div>
+      <div class="group-div">
+        <div class="group-child9"></div>
+        <div class="parts">50 parts</div>
+        <b class="judul">Judul</b>
+        <div class="sinopsis-dari-cerita1">
+          Sinopsis dari cerita atau tulisan yang dipublikasikan
+        </div>
+        <div class="group-child10"></div>
+        <div class="status">Status</div>
+        <img
+          class="mask-group-icon1"
+          alt=""
+          src="image/mask-group2@2x.png"
+        /><img
+          class="mask-group-icon1"
+          alt=""
+          src="image/mask-group2@2x.png"
+        />
+      </div>
+      <b class="completed-story">Completed Story</b>
+      <div class="binge-from-start">Binge from start to finish</div>
+      <div class="horror">Horror</div>
+      <div class="comedy">Comedy</div>
+      <div class="drama">Drama</div>
+      <div class="action">Action</div>
+      <div class="adventure">Adventure</div>
+      <div class="thriller">Thriller</div>
+      <div class="romance">Romance</div>
+      <div class="science">Science</div>
+      <div class="editors-picks-parent">
+        <b class="editors-picks">Editor’s Picks </b>
+        <div class="editors-handpicked-favorites">
+          Editor’s handpicked favorites
+        </div>
+        <img class="group-icon" alt="" src="image/group-57@2x.png" />
+      </div>
     <script>
       const body = document.querySelector("body");
       const navbar = document.querySelector(".navbar");
@@ -52,5 +150,18 @@
         this.scrollY > 20 ? navbar.classList.add("sticky") : navbar.classList.remove("sticky");
       }
     </script>
+    <hr>
+
+    <footer style="margin-top: 1560px;">
+      <h3 style="color: white; margin: 20px"> About Us </h3>
+      <p style="color: white;  margin: 20px"> Our journal planner website is the perfect tool for individuals looking to increase productivity and reflect on your personal growth journey. Whether you're looking to increase your productivity, set and achieve personal goals, or simply find inner peace, our journal planner website has everything you need. </p>
+      <h3 style="color: white;  margin: 20px"> Our Social Media </h3>
+      <div class="sosmed">
+          <a href="" style="color: white;"> Instagram </a>
+          <a href="" style="color: white;"> Twitter </a>
+          <a href="" style="color: white;"> Pinterest </a>
+      </div>
+    </footer>
+
 </body>
 </html>
